# doktui

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  DEVELOPMENT.md  INTERACTION-AND-POLISH.md  LAYOUT-REVISION.md  PRD.md  PROJECT-GUIDE.md  TDD.md  TESTING.md  TRAEFIK-ROUTING.md
locales/: en.ftl
scripts/: install.ps1  install.sh
src/: main.rs
src/app/: command.rs  event.rs  mod.rs  state.rs
src/config/: mod.rs  paths.rs
src/i18n/: mod.rs
src/security/: hostkey.rs  keychain.rs  keys.rs  mod.rs
src/services/: cron.rs  docker.rs  git_deploy.rs  github.rs  github_oauth.rs  mod.rs  provision.rs  routing.rs  secrets.rs  traefik.rs  traefik.rs.recover  updater.rs
src/services/ssh/: mod.rs
src/ui/: anim.rs  components.rs  mod.rs  shell.rs  sprite.rs
src/ui/editor/: buffer.rs  highlight.rs  mod.rs  view.rs  vim.rs
src/ui/layout/: mod.rs  sidebar.rs
src/ui/theme/: mod.rs  model.rs  registry.rs  resolve.rs  validate.rs
src/ui/views/: app_canvas.rs  apps.rs  confirm.rs  containers.rs  deploy.rs  deployments_hub.rs  git_providers.rs  home.rs  logs.rs  mod.rs  monitoring.rs  new_app_wizard.rs  onboarding.rs  provisioning.rs  schedules.rs  secrets.rs  servers.rs
themes/: amber.toml  gameboy.toml  gruvbox-material.toml  paper.toml  pico8.toml  synthwave.toml
