[package]
name = "doktui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for managing remote servers via SSH — Doklabs open source"
license = "MIT"
authors = ["Doklabs"]

[dependencies]
anyhow = "1"
arboard = "3"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
cron = "0.12"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "5"
keyring = "3"
minisign-verify = "0.2"
rand = "0.8"
ratatui = { version = "0.29", features = ["crossterm"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ropey = "1.6"
russh = "0.46"
russh-keys = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
semver = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.release-musl]
inherits = "release"
